# LMCache

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.buildkite/: clean.sh  end-to-end-test.sh  install-env-e2e.sh  install-env.sh  install-lmcache.sh  pipeline.yml
.buildkite/configs/: multi_device.yaml  pd.yaml
.buildkite/k3_harness/: ci-base.Dockerfile  install-agent-stack.sh  resolve-pinned-vllm.sh  setup-blend-env.sh  setup-env.sh  setup-lmcache-only-env.sh
.buildkite/k3_tests/blend/: buildkite-pipeline.yml  pipeline.yml  run.sh
.buildkite/k3_tests/common_scripts/: helpers.sh
.buildkite/k3_tests/multiprocess/: pipeline.yml  run.sh
.buildkite/k3_tests/unit/: buildkite-pipeline.yml  pipeline.yml  run.sh
.buildkite/operator/integration/: pipeline.yaml  tests.yaml
.cursor/: BUGBOT.md
.gemini/: styleguide.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: download_opt125m_github.sh  run-cpu-e2e-validation.sh
.github/workflows/: actionlint.yml  aerospike_integration.yml  automerge-labeler.yml  build_cli_artifacts.yml  build_cpu_artifacts.yml  build_cu129_artifacts.yml  build_doc.yml  build_main_artifacts.yml  code_quality_checks.yml  cpu_device.yml  macos_compat.yml  nightly_build.yml  operator_nightly.yml  operator_release.yml  pr_full_build.yml  publish.yml  sync_torch_version.yml  test.yml  translate_doc_zh.yml
benchmarks/microbenchmark/: bitmap_ops_benchmark.py
benchmarks/multi-round-qa/: data_preprocessing.py
benchmarks/multi_round_qa/: multi-round-qa.py
benchmarks/musa/: README.md  bench_inprocess_transfer.py
benchmarks/rag/: rag.py
benchmarks/storage_backend_io/: README.md  storage_backend_io_benchmark.py
csrc/: completion_recorder.cpp  completion_recorder.h  engine_kv_format.h  kv_transfer_types.h  mem_alloc.cpp  mem_alloc.h  mem_kernels.cu  mem_kernels.cuh  mp_mem_kernels.cu  pybind.cpp  setup.py
csrc/storage_backends/: README.md  connector_base.h  connector_types.h
csrc/storage_manager/: bitmap.cpp  bitmap.h  fold.cpp  fold.h  periodic_event_notifier.cpp  periodic_event_notifier.h  pybind.cpp
csrc/sycl/: mem_kernels_sycl.cpp  mem_kernels_sycl.h  pybind_sycl.cpp
csrc/vllm_csrc/: ops_compact.h  pos_encoding_kernels_fused_paged_move.cu  pos_encoding_kernels_k_fused_paged.cu
docker/: Dockerfile  Dockerfile.lightweight  Dockerfile.rocm  Dockerfile.rocm-lightweight  Dockerfile.standalone  Dockerfile.xpu  README.md  example_build.sh  example_run.sh
docs/: README.md  coding_standards.md
docs/design/: ARCHITECTURE_MULTI_HARDWARE.md  README.md
docs/source/: conf.py  index.rst
examples/: README.md
examples/blend_kv_v1/: README.md  blend.py
examples/disagg_prefill/: README.md
examples/kv_cache_calculator/: generate_config.py  kv_cache_calculator.html  modelconfig.json
examples/mp_runtime_plugins/: README.md  mp_heartbeat.sh  mp_plugin.py
examples/observability/: README.md  docker-compose.yml  otel-collector.yml  prometheus.yml  start-server.sh  tempo.yml
examples/online_session/: README.md  bench_ttft_sweep.sh  openai_chat_completion_client.py
examples/p2p/: README.md  send_request.py
lmcache/: __init__.py  logging.py  native_storage_ops.pyi  non_cuda_equivalents.py  observability.py  python_ops_fallback.py  usage_context.py  utils.py
lmcache/compactor/: __init__.py  base_local_compactor.py  base_scheduler_compactor.py  h2o_local_compactor.py  sink_local_compactor.py  utils.py
lmcache/integration/: base_service_factory.py
lmcache/lmcache_frontend/: __init__.py  app.py  heartbeat.py  run_mp_server_with_frontend.sh
lmcache/sdk/: kvcache.py
lmcache/tools/: simple_discover_service.py
lmcache/v1/: cache_engine.py  config.py  config_base.py  gpu_connector.py  hidden_state_store.py  kv_layer_groups.py  lazy_memory_allocator.py  manager.py  memory_management.py  metadata.py  periodic_thread.py  pin_monitor.py  protocol.py  rpc_utils.py  system_detection.py  token_database.py
operator/: AGENTS.md  DESIGN.md  Makefile  PROJECT  README.md  go.mod  go.sum
operator/cmd/: main.go
operator/make/: build.mk  deploy.mk  dev.mk  e2e-gpu.mk  e2e.mk  lint.mk  tools.mk  unit.mk
requirements/: build.txt  cli.txt  common.txt  cuda.txt  cuda12_core.txt  cuda13_core.txt  docs.txt  lint.txt
rust/raw_block/: Cargo.toml  README.md
setup_extensions/: __init__.py  common_cpp.py  policy.py
setup_extensions/build_profiles/: __init__.py  cuda.py  musa.py  rocm.py  sycl.py
setup_extensions/storage_backend_profiles/: __init__.py  aerospike.py  mooncake.py
tests/: aerospike_ce.conf.template  conftest.py  test_observability.py
tests/benchmarks/: test_benchmark.py  test_cachegen.py  test_musa_inprocess_benchmark.py  test_xpu_connector_benchmark.py  test_xpu_layerwise_connector_benchmark.py  utils.py
tests/cli/: conftest.py  test_describe.py  test_ping.py
tests/compaction/: test_block_manager.py
tests/disagg/: test_nixl_storage_backend.py
tests/lmcache_frontend/: test_heartbeat.py
tests/tools/: test_cache_simulator.py
tests/v1/: test_address_manager.py  test_bloom_filter.py  test_c_ops_fallback_parity.py  test_cache_engine.py  test_config.py  test_device_id_race.py  test_ec_connector.py  test_gds.py  test_gpu_connector.py  test_hidden_state_store.py  test_kv_cache_groups.py  test_kv_layer_groups_manager.py  test_manager.py  test_mem_kernels.py  test_memory_management.py  test_mp_mem_kernels.py  test_musa_connector.py  test_musa_mp_handle.py  test_musa_native.py  test_musa_support.py  test_nixl_batched_contains.py  test_nixl_doca_memos.py  test_nixl_multipath.py  test_nixl_storage.py  test_non_cuda_equivalents.py  test_pos_kernels.py  test_python_ops_fallback.py  test_remote_metadata.py  test_subclass_discovery.py  test_token_database.py  test_trtllm_integration.py  test_v1_adapter_request_finished_scheduler_role.py  test_v1_adapter_state_desync.py  test_vllm_kv_cache_groups.py  test_vllm_mp_adapter.py  test_weka.py  test_xpu_connector.py  test_xpu_sglang_connector.py  utils.py
tools/: translate_docs_zh.py
(+1004 files in other folders)
